--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -8,6 +8,8 @@
 
 [[path]]
 == 회원
+== 회원가입
+operation::memberRegister[snippets='http-request,request-fields,http-response,response-fields']
 === 로그인
 === 회원 정보 수정
 === 회원 삭제
