--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -12,7 +12,8 @@
 operation::memberRegister[snippets='http-request,request-fields,http-response,response-fields']
 == 회원가입 실패
 operation::memberRegisterFailed[snippets='http-request,request-fields,http-response,response-fields']
-=== 로그인
+=== 로그인 성공
+operation::loginSuccess[snippets='http-request,request-fields,http-response,response-fields']
 === 회원 정보 수정
 === 회원 삭제
 
