test: 로그인 실패 테스트

--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -14,6 +14,8 @@ operation::memberRegister[snippets='http-request,request-fields,http-response,re
 operation::memberRegisterFailed[snippets='http-request,request-fields,http-response,response-fields']
 === 로그인 성공
 operation::loginSuccess[snippets='http-request,request-fields,http-response,response-fields']
+=== 로그인 실패
+operation::loginFailed[snippets='http-request,request-fields,http-response,response-fields']
 === 회원 정보 수정
 === 회원 삭제
 
