--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -18,5 +18,5 @@ operation::loginSuccess[snippets='http-request,request-fields,http-response,resp
 operation::loginFailed[snippets='http-request,request-fields,http-response,response-fields']
 == 배달
 === 배달 조회
-operation::getDeliveries[snippets='http-request,request-fields,http-response,response-fields']
+operation::getDeliveries[snippets='http-request,request-parameters,http-response,response-fields']
 === 배달 주소 수정
