--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -20,3 +20,5 @@ operation::loginFailed[snippets='http-request,request-fields,http-response,respo
 === 배달 조회
 operation::getDeliveries[snippets='http-request,request-parameters,http-response,response-fields']
 === 배달 주소 수정
+operation::editDestinationDocument[snippets='http-request,path-parameters,request-fields,http-response,response-fields']
+
