--- a/src/docs/asciidoc/api.adoc
+++ b/src/docs/asciidoc/api.adoc
@@ -21,4 +21,6 @@ operation::loginFailed[snippets='http-request,request-fields,http-response,respo
 operation::getDeliveries[snippets='http-request,request-parameters,http-response,response-fields']
 === 배달 주소 수정
 operation::editDestinationDocument[snippets='http-request,path-parameters,request-fields,http-response,response-fields']
+=== 배달 주소 수정 실패
+operation::failedEditDestinationDocument[snippets='http-request,path-parameters,request-fields,http-response,response-fields']
 
